# sdl3-migration-clang-tidy-plugin

./: .gitignore  CMakeLists.txt  LICENSE  README-migration.md  README.md  SDL3MigrationCheck.cpp  checked_file.cpp
tests/: .clang-format  run_tests.py  test_atomic_after.cpp  test_atomic_before.cpp  test_audio_after.cpp  test_audio_before.cpp  test_gamepad_after.cpp  test_gamepad_before.cpp  test_haptic_after.cpp  test_haptic_before.cpp  test_joystick_after.cpp  test_joystick_before.cpp  test_mouse_after.cpp  test_mouse_before.cpp  test_mutex_after.cpp  test_mutex_before.cpp  test_rect_after.cpp  test_rect_before.cpp  test_render_after.cpp  test_render_before.cpp  test_surface_after.cpp  test_surface_before.cpp
